[package]
name = "ginkou"
version = "0.1.0"
authors = ["Lúcás Meier <cronokirby@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "2.0.1"
mecab = "0.1"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rusqlite = "0.18"
structopt = { version = "0.2.1", default-features = false }